@@ -112,16 +112,69 @@ account or you will get permission errors when trying to access the Docker
 daemon.  Unfortunately, this is a security risk and goes against best practices
 but it is the only way I am aware of making docker-in-docker work.
 
+## Example Usage (Ansible)
+If you need more control at deployment time you can define all the JVM settings
+at deployment time.  Here is an example of Ansible playbook that does just that.
+Look in the examples folder for a working sample.  The idea is that a shell
+script is not needed to run the container.
+
+```
+---
+- name: Launch JVM
+  hosts: localhost
+  become: no
+  vars:
+      container_name: single-core-jdk-jmx-ansible
+      ram_in_bytes: 33554432
+      swap_memory_in_bytes: 0
+      dns_ttl: 30
+      jmx_port: 2020
+      image: singlecorejmxansible_single-core-jdk-jmx-ansible:latest
+  tasks:
+      - name: Stopping the container
+        shell: "docker stop {{ container_name }} || true"
+
+      - name: Removing the container
+        shell: "docker rm --force=true {{ container_name }} || true"
+
+      - name: Running the container
+        command: "docker run --cpus 1
+                             --detach
+                             --name {{ container_name }}
+                             --net host
+                             --rm
+                             --memory {{ ram_in_bytes }}
+                             --memory-swap {{ swap_memory_in_bytes }}
+                             --volume /var/run/docker.sock:/var/run/docker.sock
+                             {{ image }}
+                             java -server
+                                  -XX:+UnlockExperimentalVMOptions
+                                  -XX:+UseCGroupMemoryLimitForHeap
+                                  -XX:+ScavengeBeforeFullGC
+                                  -XX:+CMSScavengeBeforeRemark
+                                  -XX:+UseSerialGC
+                                  -XX:MinHeapFreeRatio=20
+                                  -XX:MaxHeapFreeRatio=40
+                                  -XX:GCTimeRatio=4
+                                  -XX:AdaptiveSizePolicyWeight=90
+                                  -Dsun.net.inetaddr.ttl={{ dns_ttl }}
+                                  -Dcom.sun.management.jmxremote.port={{ jmx_port }}
+                                  -Dcom.sun.management.jmxremote.rmi.port={{ jmx_port }}
+                                  -Dcom.sun.management.jmxremote.authenticate=false
+                                  -Dcom.sun.management.jmxremote.ssl=false
+                                  Hello"
+```
+
 ## Observed JVM Memory Behavior
 Using [VisualVM](https://visualvm.github.io/) I was able to watch the JVM's heap
-and have the following observations. Test were run with 
+and have the following observations. Test were run with
 `OpenJDK Runtime Environment (Zulu 8.21.0.1-linux64) (build 1.8.0_131-b11)`.
 
 1. Docker's `--memory` switch sets the cgroup settings
 1. `exec` into a container and run `mount | grep cgroup | grep memory`, `more /sys/fs/cgroup/memory/memory.limit_in_bytes` to see the cgroup value
 1. JVM's `-XX:+UseCGroupMemoryLimitForHeap` only respects the cgroup settings when explicit settings are **not** provided
 1. setting `-Xms` and `-Xmx` can exceed the cgroup setting and what Docker thinks you are using for memory
-1. not specifing heap settings cause the JVM to allocate a much smaller heap, anecdotally about half of the Docker allocation 
+1. not specifing heap settings cause the JVM to allocate a much smaller heap, anecdotally about half of the Docker allocation
 
 Your situation will dictate what runtime switches to use. A scheduler, such as Kubernetes,
 will only understand the cgroup settings so you can either let the JVM figure out the heap
@@ -129,7 +182,7 @@ based on what the scheduler assigns it or specify the heap settings explicitly. 
 specify the heap by hand and get it wrong by exceeding the amount of memory the scheduler
 thinks you want to use, you could cause an OOM situation with other containers.
 Eventually, the JVM will catch up with the container world but until that day, we'll have
-to manage memory settings very carefully. 
+to manage memory settings very carefully.
 
 # Troubleshooting
 
